# hyper-shards-v7

./: .gitignore  docker-compose.yml  eslint-check.json  eslint-output.json  eslint_errors.txt  eslint_json.txt  hyper-shards-v7.code-workspace  index.html  mobile_test_output.txt  mobile_test_output_2.txt  netlify.toml  package-lock.json  package.json  playwright.config.ts  test_output_2.txt  test_output_react19.txt  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: component_glossary.md  lessons-learned.md  orchestrator.md
docs/architecture/: current_dependency_graph.md  realtime_schema.md
docs/store/: asset_manifest.md  store_descriptions.md
docs/workflows/: assets.md  build.md  deploy.md  docs.md  fix.md  start.md  tune.md  verify.md
legacy/: index.html
public/music/: README.txt
scripts/: auto-doc.js  create_dummy_sfx.ps1  generate-media.js  generate_sfx.ps1  init-repo.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/bridges/: MultiplayerBridge.ts  WebTransportBridge.ts
src/components/: GameCanvas.tsx
src/components/screens/: AuthScreen.tsx  (+12 more)
src/compute/: collision.wgsl
src/i18n/: I18nContext.tsx  en.json
src/lib/: supabase.ts
src/styles/: index.css
src/views/: CanvasView.tsx  ParticleSystemView.tsx
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_profiles.sql  002_leaderboards.sql
tests/e2e/: app.spec.ts  comprehensive.spec.ts  verify_all_upgrades.spec.ts  verify_icons.spec.ts  verify_issues.spec.ts  verify_shop_upgrades.spec.ts
(+44 files in other folders)
