[package]
name = "hyper-shards"
version = "1.0.0"
description = "A fast-paced arcade space shooter with pilot classes and multiplayer"
authors = ["Hyper Shards Team"]
license = "MIT"
repository = "https://github.com/your-repo/hyper-shards"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hyper_shards_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# For future Steam integration
# steam-sdk = { version = "0.2", optional = true }

[features]
default = ["devtools"]
devtools = []
# steam = ["steam-sdk"]
